<resources>
    <string name="app_name">Farm Mates</string>
    <string name="homeNav">Inicio</string>
    <string name="mapNav">Mapa</string>
    <string name="profileNav">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appTitle">Farm Mates</string>
    <string name="login">Iniciar Sesión</string>
    <string name="emailLabel">Correo electrónico:</string>
    <string name="passwordLabel">Contraseña:</string>
    <string name="loginLabel">Ingresar</string>
    <string name="fingerprintAlt">Login with fingerprint</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="signUpLabel">¿Aún no tienes una cuenta?</string>
    <string name="goSignUp">Regístrate</string>
    <string name="fingerprintLogin">Ingresa con huella</string>
    <string name="signup">Regístrate</string>
    <string name="confirmPassword">Confirma tu contraseña:</string>
    <string name="signUpButton">Registrarse</string>
    <string name="alreadyAccount">¿Ya tienes una cuenta?</string>
    <string name="nextButton">Siguiente</string>
    <string name="nameLabel">Nombre (s):</string>
    <string name="lastNameLabel">Apellido (s):</string>
    <string name="phoneNumberLabel">Número de teléfono</string>
    <string name="addProfilePicAlt">Añade tu foto de perfil</string>
    <string name="goBackButton">Volver</string>
    <string name="profilePicAlt">Foto de perfil - Accede a tu cuenta</string>
    <string name="mapAlt">Mapa</string>
    <string name="newReport">Novedad</string>
    <string name="requestSupplies">Suministros</string>
    <string name="tasks">Tareas</string>
    <string name="chatAlt">Mensajes</string>
    <string name="prompt_info_title">FarmMates</string>
    <string name="prompt_info_subtitle">Login</string>
    <string name="prompt_info_description">FarmMates uses your fingertip ot login faster and safer</string>
    <string name="prompt_info_use_app_password">Use password instead</string>
    <string name="location_permission_denied" />
    <string name="permission_required_toast" />
    <string name="permission_rationale_location" />
    <string name="ruta">Ruta</string>
    <string name="partnersCard">Colaboradores</string>
    <string name="machinesCard">Maquinaria</string>
    <string name="tempPlaceholder">22°</string>
    <string name="datePlaceholder">Abr 28, 2024</string>
    <string name="locationPlaceholder">San Jose, California</string>
    <string name="weather_icon_alt">weather icon</string>
    <string name="categoriesTitle">Categorías</string>
    <string name="recentTasks">Tareas recientes</string>
    <string name="taskPlaceholder">Reparar molino 4</string>
    <string name="sectorPlaceholder">Sector 7, Cacao</string>
    <string name="task2Placeholder">Recolectar café</string>
    <string name="sector2Placeholder">Sector 3, Café</string>
    <string name="channel_description">Canal de notificaciones\n</string>
    <string name="altReportImage">Añadir imagen a reporte</string>
    <string name="addDescription">Descripción:</string>
    <string name="addDescriptionHint">Añade una descripción</string>
    <string name="addDateLabel">Fecha del incidente:</string>
    <string name="addDateHint">Selecciona una fecha:</string>
    <string name="triageLabel">Prioridad: </string>
    <string name="sendReport">Enviar</string>
    <string name="meMessageContent">This is a Message from me</string>
    <string name="timePlaceholder">10:00</string>
    <string name="otherMessageContent">%s</string>
    <string name="otherUserNamePlaceholder">Other User Name</string>
    <string name="noAvailableUsers">No hay usuarios</string>
    <string name="sendButton">Send</string>
    <string name="sendMessageAlt">Send message</string>
    <string name="loading">Cargando...</string>
    <string name="typeMessageHint">Enter Message</string>
</resources>