<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ReportActivity">

    <TextView
        android:id="@+id/createReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newReport"
        android:textColor="@color/mainGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reportImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/altReportImage"
        android:src="@drawable/add_photo"
        app:layout_constraintBottom_toTopOf="@id/descInputSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createReportTitle" />

    <LinearLayout
        android:id="@+id/descInputSection"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportImage">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/addDescription"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/addDescriptionHint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/addDateLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/addDateHint"
            android:importantForAutofill="no"
            android:inputType="date" />

        <TextView
            android:id="@+id/triageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/triageLabel"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/triageSelect"
            android:layout_width="match_parent"
            android:entries="@array/triageItems"
            android:layout_height="50dp" />
    </LinearLayout>

    <Button
        android:id="@+id/sendReport"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sendReport"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descInputSection" />

</androidx.constraintlayout.widget.ConstraintLayout>