<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PersonalRegisterActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textColor="@color/mainGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loadProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/addProfilePicAlt"
            android:src="@drawable/profileplaceholder" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/name"
            android:text="@string/nameLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/lastName"
            android:text="@string/lastNameLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/confirmLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/phoneNumber"
            android:text="@string/phoneNumberLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="phone"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/signUpButton"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/goBackButton"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>