<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatRow"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ChatListActivity">

    <ImageView
        android:id="@+id/userProfilePic"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/profilePicAlt"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:text="@string/nameLabel"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/chatButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/chatAlt"
        android:scaleType="fitCenter"
        android:src="@drawable/chat" />
</LinearLayout>