<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/weatherSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempPlaceholder"
                android:textColor="@color/mainGreen"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datePlaceholder"
                android:textColor="@color/mainGreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/locationPlaceholder"
                android:textSize="15sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/location" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/weather_icon_alt"
            android:scaleType="fitCenter"
            android:src="@drawable/sun" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/categoriesTitle"
        android:textColor="@color/mainGreen"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recentTasksTitle"
        app:layout_constraintEnd_toStartOf="@id/recentTasksTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp">

                <ImageButton
                    android:id="@+id/seePartners"
                    android:layout_width="180dp"
                    android:layout_height="175dp"
                    android:alpha="0.7"
                    android:background="@drawable/rectangle_shape"
                    android:contentDescription="@string/partnersCard"
                    android:scaleType="center"
                    android:src="@drawable/farmers" />

                <TextView
                    android:id="@+id/partnersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:letterSpacing="0.02"
                    android:text="@string/partnersCard"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp">

                <ImageButton
                    android:id="@+id/seeMachines"
                    android:layout_width="180dp"
                    android:layout_height="175dp"
                    android:alpha="0.8"
                    android:background="@drawable/rectangle_shape"
                    android:contentDescription="@string/machinesCard"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tractor2" />

                <TextView
                    android:id="@+id/machinesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:letterSpacing="0.02"
                    android:text="@string/machinesCard"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/recentTasksTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/recentTasks"
        android:textColor="@color/mainGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        tools:layout_editor_absoluteY="410dp" />

    <ScrollView
        android:id="@+id/tasksSection"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentTasksTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/taskPlaceholder"
                    android:textColor="@color/mainGreen"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/check" />

                <TextView
                    android:id="@+id/task_1_sub"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="40dp"
                    android:text="@string/sectorPlaceholder"
                    android:textStyle="bold|italic"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_2_title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/task2Placeholder"
                    android:textColor="@color/mainGreen"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/check" />

                <TextView
                    android:id="@+id/task_2_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="40dp"
                    android:text="@string/sector2Placeholder"
                    android:textStyle="bold|italic"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>